clean up folder structure

--- a/notebook_learn_tictactoe.ipynb
+++ b/notebook_learn_tictactoe.ipynb
@@ -30,7 +30,11 @@
    ],
    "source": [
     "from IPython.display import Image\n",
-    "Image(url='https://img.poki.com/cdn-cgi/image/quality=78,width=600,height=600,fit=cover,f=auto/85535e05d1f130b16751c8308cfbb19b.png', width=300)"
+    "\n",
+    "Image(\n",
+    "    url=\"https://img.poki.com/cdn-cgi/image/quality=78,width=600,height=600,fit=cover,f=auto/85535e05d1f130b16751c8308cfbb19b.png\",\n",
+    "    width=300,\n",
+    ")"
    ]
   },
   {
@@ -49,12 +53,13 @@
     "from tqdm import tqdm\n",
     "import gym_TicTacToe\n",
     "\n",
-    "from qagent import Qagent\n",
-    "from player import Player\n",
+    "from src.qagent import Qagent\n",
+    "from src.player import Player\n",
+    "from src.play_tictactoe import play_tictactoe\n",
+    "\n",
     "from utils import (\n",
     "    create_state_dictionary,\n",
     "    load_qtable,\n",
-    "    play_tictactoe,\n",
     "    reshape_state,\n",
     "    save_qtable,\n",
     ")\n",
@@ -143,16 +148,16 @@
    ],
    "source": [
     "color = 1\n",
-    "action = 4 \n",
+    "action = 4\n",
     "\n",
     "new_state, reward, done, _ = env.step((action, color))\n",
     "print(new_state, reward, done)\n",
-    "print(env.render())\n"
+    "print(env.render())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,19 +194,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_parameters = {\n",
-    "    \"learning_rate\": 1.0, \n",
-    "    \"gamma\": 0.9\n",
-    "}\n",
+    "learning_parameters = {\"learning_rate\": 1.0, \"gamma\": 0.9}\n",
     "exploration_parameters = {\n",
     "    \"max_epsilon\": 1.0,\n",
     "    \"min_epsilon\": 0.0,\n",
     "    \"decay_rate\": 0.000005,\n",
-    "\n",
     "}\n",
     "\n",
     "name = f\"qtable_{episodes}\"\n",
@@ -212,11 +213,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def play(player, state, action_space):\n",
     "\n",
     "    action = qagent.get_action(state, action_space)\n",
@@ -238,14 +238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 27/90000 [00:00<05:43, 262.14it/s]"
+      "  0%|          | 36/90000 [00:00<04:14, 352.94it/s]"
      ]
     },
     {
@@ -259,49 +259,119 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 11%|█         | 10046/90000 [00:30<04:00, 333.08it/s]"
+      " 11%|█         | 10068/90000 [00:28<03:23, 393.58it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "episode: 10000,             epsilon: 0.01,             sum q-table: 39852.392319000006,             elapsed time [min]: 0.51,              done [%]: 11.11111111111111             \n"
+      "episode: 10000,             epsilon: 0.95,             sum q-table: 95966.98500999999,             elapsed time [min]: 0.47,              done [%]: 11.11111111111111             \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 22%|██▏       | 20035/90000 [01:04<04:11, 278.27it/s]"
+      " 22%|██▏       | 20048/90000 [00:54<02:48, 414.67it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "episode: 20000,             epsilon: 0.0,             sum q-table: 39970.420419,             elapsed time [min]: 1.07,              done [%]: 22.22222222222222             \n"
+      "episode: 20000,             epsilon: 0.9,             sum q-table: 136012.59715,             elapsed time [min]: 0.91,              done [%]: 22.22222222222222             \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 33%|███▎      | 30052/90000 [01:35<02:43, 367.76it/s]"
+      " 33%|███▎      | 30070/90000 [01:20<02:11, 456.08it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "episode: 30000,             epsilon: 0.0,             sum q-table: 39970.420419,             elapsed time [min]: 1.58,              done [%]: 33.33333333333333             \n"
+      "episode: 30000,             epsilon: 0.86,             sum q-table: 147013.89811,             elapsed time [min]: 1.34,              done [%]: 33.33333333333333             \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 44%|████▍     | 39412/90000 [02:05<02:30, 335.93it/s]"
+      " 45%|████▍     | 40055/90000 [01:47<02:38, 314.18it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "episode: 40000,             epsilon: 0.82,             sum q-table: 151038.5526,             elapsed time [min]: 1.8,              done [%]: 44.44444444444444             \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 56%|█████▌    | 50076/90000 [02:15<01:33, 428.88it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "episode: 50000,             epsilon: 0.78,             sum q-table: 152085.8446,             elapsed time [min]: 2.26,              done [%]: 55.55555555555556             \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|██████▋   | 60060/90000 [02:44<01:26, 346.37it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "episode: 60000,             epsilon: 0.74,             sum q-table: 153296.5445,             elapsed time [min]: 2.75,              done [%]: 66.66666666666666             \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 78%|███████▊  | 70025/90000 [03:12<01:39, 200.62it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "episode: 70000,             epsilon: 0.7,             sum q-table: 153697.5919,             elapsed time [min]: 3.21,              done [%]: 77.77777777777779             \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 89%|████████▉ | 80049/90000 [03:41<00:27, 361.87it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "episode: 80000,             epsilon: 0.67,             sum q-table: 153990.49790000002,             elapsed time [min]: 3.69,              done [%]: 88.88888888888889             \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 90000/90000 [04:07<00:00, 363.26it/s]\n"
      ]
     }
    ],
@@ -321,7 +391,7 @@
     "    player_1.reset_reward()\n",
     "    player_2.reset_reward()\n",
     "\n",
-    "    # change start of players, randomly change the order players \n",
+    "    # change start of players, randomly change the order players\n",
     "    # to start the game, integer either 0 or 1\n",
     "    start = np.random.randint(2)\n",
     "\n",
@@ -353,28 +423,228 @@
     "            elapsed time [min]: {time_passed},  \\\n",
     "            done [%]: {episode / episodes * 100} \\\n",
     "            \"\n",
-    "        )"
+    "        )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "qtable_90000.npy saved!\n"
+     ]
+    }
+   ],
    "source": [
+    "qtable = qagent.get_qtable()\n",
+    "\n",
     "if save:\n",
-    "    save_qtable(qagent.qtable, folder, name)"
+    "    save_qtable(qtable, folder, name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Human beginns\n",
+      "--------------------\n",
+      "╒═══╤═══╤═══╕\n",
+      "│ - │ - │ - │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ - │ - │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ - │ - │\n",
+      "╘═══╧═══╧═══╛\n",
+      "--------------------\n",
+      "Move Human\n",
+      "Action: 5\n",
+      "-1\n",
+      "--------------------\n",
+      "move Agent\n",
+      "Action: 0\n",
+      "╒═══╤═══╤═══╕\n",
+      "│ O │ - │ - │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ - │ X │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ - │ - │\n",
+      "╘═══╧═══╧═══╛\n",
+      "--------------------\n",
+      "Move Human\n",
+      "Action: 4\n",
+      "-1\n",
+      "--------------------\n",
+      "move Agent\n",
+      "Action: 1\n",
+      "╒═══╤═══╤═══╕\n",
+      "│ O │ O │ - │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ X │ X │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ - │ - │\n",
+      "╘═══╧═══╧═══╛\n",
+      "--------------------\n",
+      "Move Human\n",
+      "Action: 3\n",
+      "9\n",
+      "********************\n",
+      "Human won!\n",
+      "********************\n",
+      "╒═══╤═══╤═══╕\n",
+      "│ O │ O │ - │\n",
+      "├───┼───┼───┤\n",
+      "│ X │ X │ X │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ - │ - │\n",
+      "╘═══╧═══╧═══╛\n",
+      "\n",
+      "\n",
+      "\n",
+      "Agent beginns\n",
+      "--------------------\n",
+      "--------------------\n",
+      "move Agent\n",
+      "Action: 0\n",
+      "╒═══╤═══╤═══╕\n",
+      "│ O │ - │ - │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ - │ - │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ - │ - │\n",
+      "╘═══╧═══╧═══╛\n",
+      "--------------------\n",
+      "Move Human\n",
+      "Action: 4\n",
+      "-1\n",
+      "--------------------\n",
+      "move Agent\n",
+      "Action: 1\n",
+      "╒═══╤═══╤═══╕\n",
+      "│ O │ O │ - │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ X │ - │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ - │ - │\n",
+      "╘═══╧═══╧═══╛\n",
+      "--------------------\n",
+      "Move Human\n",
+      "Action: 5\n",
+      "-1\n",
+      "--------------------\n",
+      "move Agent\n",
+      "Action: 6\n",
+      "╒═══╤═══╤═══╕\n",
+      "│ O │ O │ - │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ X │ X │\n",
+      "├───┼───┼───┤\n",
+      "│ O │ - │ - │\n",
+      "╘═══╧═══╧═══╛\n",
+      "--------------------\n",
+      "Move Human\n",
+      "Action: 3\n",
+      "9\n",
+      "********************\n",
+      "Human won!\n",
+      "********************\n",
+      "╒═══╤═══╤═══╕\n",
+      "│ O │ O │ - │\n",
+      "├───┼───┼───┤\n",
+      "│ X │ X │ X │\n",
+      "├───┼───┼───┤\n",
+      "│ O │ - │ - │\n",
+      "╘═══╧═══╧═══╛\n",
+      "\n",
+      "\n",
+      "\n",
+      "Human beginns\n",
+      "--------------------\n",
+      "╒═══╤═══╤═══╕\n",
+      "│ - │ - │ - │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ - │ - │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ - │ - │\n",
+      "╘═══╧═══╧═══╛\n",
+      "--------------------\n",
+      "Move Human\n",
+      "Action: 4\n",
+      "-1\n",
+      "--------------------\n",
+      "move Agent\n",
+      "Action: 0\n",
+      "╒═══╤═══╤═══╕\n",
+      "│ O │ - │ - │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ X │ - │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ - │ - │\n",
+      "╘═══╧═══╧═══╛\n",
+      "--------------------\n",
+      "Move Human\n",
+      "Action: 8\n",
+      "-1\n",
+      "--------------------\n",
+      "move Agent\n",
+      "Action: 5\n",
+      "╒═══╤═══╤═══╕\n",
+      "│ O │ - │ - │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ X │ O │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ - │ X │\n",
+      "╘═══╧═══╧═══╛\n",
+      "--------------------\n",
+      "Move Human\n",
+      "Action: 2\n",
+      "-1\n",
+      "--------------------\n",
+      "move Agent\n",
+      "Action: 1\n",
+      "╒═══╤═══╤═══╕\n",
+      "│ O │ O │ X │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ X │ O │\n",
+      "├───┼───┼───┤\n",
+      "│ - │ - │ X │\n",
+      "╘═══╧═══╧═══╛\n",
+      "--------------------\n",
+      "Move Human\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\maurol\\OneDrive\\Dokumente\\Python_Scripts\\learn-tictactoe-through-self-play\\notebook_learn_tictactoe.ipynb Cell 14'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/maurol/OneDrive/Dokumente/Python_Scripts/learn-tictactoe-through-self-play/notebook_learn_tictactoe.ipynb#ch0000012?line=0'>1</a>\u001b[0m \u001b[39m# test the algorithm with playing against it\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/maurol/OneDrive/Dokumente/Python_Scripts/learn-tictactoe-through-self-play/notebook_learn_tictactoe.ipynb#ch0000012?line=1'>2</a>\u001b[0m play_tictactoe(env, qagent\u001b[39m.\u001b[39;49mqtable, max_steps, state_dict)\n",
+      "File \u001b[1;32mc:\\Users\\maurol\\OneDrive\\Dokumente\\Python_Scripts\\learn-tictactoe-through-self-play\\utils.py:119\u001b[0m, in \u001b[0;36mplay_tictactoe\u001b[1;34m(env, qtable, max_steps, state_dict, num_test_games)\u001b[0m\n\u001b[0;32m    <a href='file:///c%3A/Users/maurol/OneDrive/Dokumente/Python_Scripts/learn-tictactoe-through-self-play/utils.py?line=115'>116</a>\u001b[0m action \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mnan\n\u001b[0;32m    <a href='file:///c%3A/Users/maurol/OneDrive/Dokumente/Python_Scripts/learn-tictactoe-through-self-play/utils.py?line=117'>118</a>\u001b[0m \u001b[39mwhile\u001b[39;00m action \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m action_space:\n\u001b[1;32m--> <a href='file:///c%3A/Users/maurol/OneDrive/Dokumente/Python_Scripts/learn-tictactoe-through-self-play/utils.py?line=118'>119</a>\u001b[0m     action \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\n\u001b[0;32m    <a href='file:///c%3A/Users/maurol/OneDrive/Dokumente/Python_Scripts/learn-tictactoe-through-self-play/utils.py?line=119'>120</a>\u001b[0m         \u001b[39minput\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39mchoose an action from \u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m: \u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m.\u001b[39;49mformat(action_space))\n\u001b[0;32m    <a href='file:///c%3A/Users/maurol/OneDrive/Dokumente/Python_Scripts/learn-tictactoe-through-self-play/utils.py?line=120'>121</a>\u001b[0m     )\n\u001b[0;32m    <a href='file:///c%3A/Users/maurol/OneDrive/Dokumente/Python_Scripts/learn-tictactoe-through-self-play/utils.py?line=121'>122</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mAction:\u001b[39m\u001b[39m\"\u001b[39m, action)\n\u001b[0;32m    <a href='file:///c%3A/Users/maurol/OneDrive/Dokumente/Python_Scripts/learn-tictactoe-through-self-play/utils.py?line=122'>123</a>\u001b[0m action_space \u001b[39m=\u001b[39m action_space[action_space \u001b[39m!=\u001b[39m action]\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
    "source": [
     "# test the algorithm with playing against it\n",
-    "play_tictactoe(env, qagent.qtable, max_steps, state_dict)"
+    "play_tictactoe(env, qtable, max_steps, state_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
